2002-11-15 Ronald Oussoren <oussoren@cistron.nl>
	- Modules/objc: Remove sel_class_method and sel_allocator from
	  selector objects, and introduce a sel_flags.
	- Modules/objc/selector.m: Add Python visible attributes that allow
	  reflection to access more information about selectors/methods.
	- Modules/objc/selector.m: donate_ref attribute is writable, allowing
	  python code to update this flag. Should be used only in setup
	  code.
	- Also check for updated Objective-C method-tables in obj.__getattr__,
	  PyObject_GenericGetAttr directly pokes into the class __dict__
	  instead of calling objc_class.__getattr__.

2002-11-15  Bill Bumgarner  <bbum@codefab.com>
	* Modified NibLoader to not generate a class for FirstResponder.
	* Integrated Just van Rossum's NibLoader script into the module.

2002-11-13 Ronald Oussoren <oussoren@cistron.nl>
	* Added workaround for 1 of the problems with NSTextView

2002-11-11  Bill Bumgarner  <bbum@codefab.com>
	* Fixed spelling error in NSComboxBoxDataSource definition.

2002-11-11 Ronald Oussoren <oussoren@cistron.nl>
 	* Lib/objc/__init__.py: Don't remove current directory from sys.path

2002-11-08 Ronald Oussoren <oussoren@cistron.nl>
	* Use integer for lots of userInfo arguments in the AppKit

2002-11-08  Bill Bumgarner  <bbum@codefab.com>
	* Cleaned up the Cocoa-Python project template.

2002-11-05  Bill Bumgarner  <bbum@codefab.com>
	* added an NSNumber test

2002-11-02  Bill Bumgarner  <bbum@codefab.com>
	* Change addressbook example to be in line with updated
	convenience methods.

2002-10-31 Ronald Oussoren <oussoren@cistron.nl>
	* Use 'nibwrapper' technique in all GUI examples.
	* Actually remove old version of classnib.py and add the
	  version in the new location (as used by Tools/mknibwrapper)

2002-10-31  Bill Bumgarner  <bbum@codefab.com>
	* Fixed a typo in NSOutlineViewDataSource.
	* Fixed the classnib.py script slightly.
	* Added support for NSSet in the convenience methods.
